--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -182,8 +182,7 @@
                         <div id="transaction-container">
                              <template is='dom-if' if='[[backtestTransactions]]'>
                                 <aq-transaction-table 
-                                    transactions="[[backtestTransactions]]"
-                                    no-proposed-orders>
+                                    transactions="[[backtestTransactions]]">
                                 </aq-transaction-table>
                             </template>
                         </div>
