--- a/src/components/common/aq-portfolio-table.html
+++ b/src/components/common/aq-portfolio-table.html
@@ -151,7 +151,13 @@
 				var grid = this.$$('vaadin-grid');
      			var items = [];
 
-     			//this.positions.sort((a , b) => { return a.date > b.date});
+     			this.positions.sort(function(a , b) { 
+					if (a.date > b.date) {
+						return 1;
+					} else if(a.date < b.date) {
+						return -1;
+					}
+				});   
      			
      			if(this.positions.length > 0) {
      				var topDate = this.positions[this.positions.length - 1].date;
