--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -182,7 +182,8 @@
                         <div id="transaction-container">
                              <template is='dom-if' if='[[backtestTransactions]]'>
                                 <aq-transaction-table 
-                                    transactions="[[backtestTransactions]]">
+                                    transactions="[[backtestTransactions]]"
+                                    no-orders>
                                 </aq-transaction-table>
                             </template>
                         </div>
