--- a/src/components/community/aq-community-postdetail.html
+++ b/src/components/community/aq-community-postdetail.html
@@ -317,7 +317,6 @@
       },
 
       loadMoreData: function() {
-          console.log("Chuityaap");
           if(this.threadDetails) {
               if(this.replies.length < this.threadDetails.nreplies) {
                   this.skip = (this.skip + 1) * this.limit;
@@ -330,7 +329,7 @@
       },
 
       showMeLove: function() {
-          console.log("HOla Hola");
+          //console.log("HOla Hola");
       },
 
     });
