--- a/src/components/aq-homepage.html
+++ b/src/components/aq-homepage.html
@@ -7,6 +7,8 @@
 <link rel='import' href='../../bower_components/app-route/app-route.html'>
 <link rel='import' href='../../bower_components/app-route/app-location.html'>
 
+<link rel="import" href="./common/aq-portwidth-detector.html">
+
 <link rel='import' href='./aq-footer.html'>
 
 <link rel='import' href='../icons/aq-iconset.html'>
@@ -25,6 +27,7 @@
       .section {
           height:100vh;
           @apply(--layout-vertical);
+
       }
 
     	#section-home {
@@ -32,6 +35,7 @@
         --background-color: #5CC6CD;
         --background-color: #70cdd3;
         height: 92vh;
+        @apply(--layout-center);
 	    }
 
     	#headerTagline {
@@ -40,6 +44,18 @@
         color: teal;
         font-weight: 400;
     	}
+
+      #headerTagline.semiWide{
+        font-size: 50px;
+      }
+
+      #headerTagline.narrowWide{
+        font-size: 40px;
+      }
+
+      #headerTagline.narrow{
+        font-size: 30px;
+      }
 
       #headerPara {
         --color: #ffffff;
@@ -50,10 +66,16 @@
         font-weight: 400;
       }
 
-      #headerPara span {
+      #headerPara.semiWide {
         font-size: 20px;
-        color: black;
-        font-style: italic;
+      }
+
+      #headerPara.narrowWide {
+          font-size: 16px;
+      }
+
+      #headerPara.narrow {
+          font-size: 12px;
       }
 
       h3 {
@@ -67,6 +89,21 @@
               font-size: 16px;
               --padding: 10px 60px;
           };
+      }
+
+      paper-button.semiWide {
+          width: 150px;
+          font-size: 14px;
+      }
+
+      paper-button.narrowWide {
+          width: 120px;
+          font-size: 13px;
+      }
+
+      paper-button.narrow {
+          width: 100px;
+          font-size: 12px;
       }
 
       #button-group {
@@ -110,10 +147,22 @@
       #section-features {
           margin-left: 10%;
           margin-right: 10%;
+          height: 180vh;
+          @apply(--layout-vertical);
+          @apply(--layout-center);
+          margin-top: 70px;         
+      }
+
+      #section-features.superWide {
+          height: 100vh;
+          @apply(--layout-horizontal);
+          @apply(--layout-wrap);
+          @apply(--layout-justified);
+
       }
 
       #section-features-top {
-        margin-top: 70px;         
+        
       }
 
     	#section-advantages {
@@ -149,9 +198,21 @@
       }
 
       #ctaTagline {
-          font-size: 32px;
+          font-size: 36px;
           margin-bottom: 30px;
           --font-weight: 700;
+      }
+
+      #ctaTagline.semiWide {
+          font-size: 32px;
+      }
+
+      #ctaTagline.narrowWide {
+          font-size: 25px;
+      }
+
+      #ctaTagline.narrow {
+          font-size: 19px;
       }
 
       #ctaParagraph {
@@ -175,19 +236,21 @@
             pattern="/main"
             active="{{active}}">
         </app-route>
-        
+       
+        <aq-portwidth-detector width="{{width}}"></aq-portwidth-detector>
+
     		<div id="section-home" class="section">
           
-            <div class="self-center" id="headerTagline">Invest in Your Ideas</div>
+            <div class$="[[computeLayoutClass(width)]]" id="headerTagline">Invest in Your Ideas</div>
 
-            <div class="self-center" id="headerPara">Systematically research investment strategies in seconds</div>
+            <div class$="[[computeLayoutClass(width)]]" id="headerPara">Systematically research investment strategies in seconds</div>
             
             <div class="layout horizontal justified" id='button-group'>
-    	         <paper-button class="dark-button" noink on-tap='onJoin'>Register</paper-button>
+    	         <paper-button class$="dark-button [[computeLayoutClass(width)]]" noink on-tap='onJoin'>Register</paper-button>
 
                <div class="space"></div>
 
-               <paper-button class="light-button" noink on-tap='onFeatures'>Learn More</paper-button>
+               <paper-button class$="light-button [[computeLayoutClass(width)]]" noink on-tap='onFeatures'>Learn More</paper-button>
             </div>
             
             <div class="flex"></div>
@@ -195,9 +258,7 @@
             <paper-icon-button class="self-center" noink icon="aq-icons:expand-more" on-tap='onFeatures'></paper-icon-button>
     		</div>
 
-        <div class="section layout vertical" id="section-features">
-            
-            <div id="section-features-top" class="layout horizontal wrap justified">
+        <div class$="section [[computeLayoutClass(width)]]" id="section-features">
                 <feature-detail 
                     image-src="../../resources/images/home/research-big.png" 
                     heading="RESEARCH" 
@@ -209,11 +270,7 @@
                     heading="ANALYZE" 
                     description="Run unlimited backtests and visualize performance of investment strategies with variety of metrics">
                 </feature-detail>
-            </div>
-
-            <div class="flex"></div>
-
-            <div class="layout horizontal wrap justified">
+            
                 <feature-detail
                   image-src="../../resources/images/home/community-big.png" 
                   heading="COMMUNITY" 
@@ -228,20 +285,18 @@
 
             </div>
 
-            <div class="flex"></div>
         </div>
               
         <div class="section">
             <div id="callToAction" class="layout vertical center">
-                  <div class="flex"></div>
-                  <div id="ctaTagline">Join the platform and start researching your investment ideas now</div>
+                <div class="flex"></div>
+                <div id="ctaTagline" class$="[[computeLayoutClass(width)]]">Start researching your investment ideas now</div>
 
-                  <div id="ctaParagraph"></div>
+                <div id="ctaParagraph"></div>
 
-                  <paper-button class="dark-button" noink on-tap='onJoin'>Join Now</paper-button>
+                <paper-button class$="dark-button [[computeLayoutClass(width)]]" noink on-tap='onJoin'>Join Now</paper-button>
 
-                  <div class="flex"></div>
-
+                <div class="flex"></div>
             </div>
 
             <aq-footer></aq-footer>
@@ -254,32 +309,48 @@
     Polymer({
   		is: 'aq-homepage',
 
-      properties:{
-        active: {
-          type:Boolean,
-          observer:'_activeChanged',
+        properties:{
+            active: {
+              type:Boolean,
+              observer:'_activeChanged',
+            },
+
+            width: {
+              type: Object,
+            }
+
         },
 
-      },
+        _activeChanged: function() {
+            if(this.active) {
+                this.$$('#section-home').scrollIntoView(true);
+            }
+        },
+  		
+    		onJoin: function() {
+    			 this.fire('rt-changed',{route:'/user/signin'});;
+    		},
 
-      attached: function() {
-        //this.$$('#section-home').style.background = "url('../../resources/images/bg-home.jpeg')";
-         //this.$$('#section-home').style.backgroundSize = "cover";
-      },
+    		onFeatures: function() {
+    			 this.$$('#section-features').scrollIntoView(true);
+    		},
 
-      _activeChanged: function() {
-        if(this.active) {
-          this.$$('#section-home').scrollIntoView(true);
-        }
-      },
-		
-  		onJoin: function() {
-  			this.fire('rt-changed',{route:'/user/signin'});;
-  		},
+        computeLayoutClass: function(width) {
+            if(width) {
+              if (width.narrow) {
+                  return"narrow";
+              } else if (width.narrowWide) {
+                  return "narrowWide";
+              } else if (width.semiWide) {
+                  return "semiWide"
+              } else if(width.wide) {
+                  return "wide";            
+              } else {
+                  return "superWide";
+              }
 
-  		onFeatures: function() {
-  			this.$$('#section-features').scrollIntoView(true);
-  		},
+            }
+        },
 
     });
 
@@ -333,18 +404,18 @@
     </div>    
   </template>
   
-  <script>
-    Polymer({
-      is:'feature-item',
-      properties:{
-        heading:String,
-        description:String,
-        imageSrc: String,
-        link:String,
-      },
-
-    });
-  </script>
+    <script>
+      Polymer({
+          is:'feature-item',
+          
+          properties:{
+              heading:String,
+              description:String,
+              imageSrc: String,
+              link:String,
+          },
+      });
+    </script>
 </dom-module>
 
 <dom-module id='feature-detail'>
@@ -362,11 +433,16 @@
           --width: 70%;
           margin: 0 auto;
           margin-bottom: 20px;
+          height: 275px;
       }
 
       .section-detail {
           @apply(--layout-vertical);
           margin-left: 30px;
+          width: 100%;
+      }
+
+      .section-detail.narrow {
           width: 300px;
       }
 
@@ -381,6 +457,7 @@
           font-size: 16px;
           --font-weight: 700;
           margin-bottom:20px;
+          text-align: justify;
       }
 
       .section-detail-button {
@@ -406,8 +483,8 @@
             
             <!--div class="self-center section-detail-header">[[heading]]
             </div-->
-                    
-            <div class$="[[computeLayoutClass(vertical)]]  section-inner-container">
+            <aq-portwidth-detector width="{{width}}"></aq-portwidth-detector>
+            <div class="layout horizontal around-justified section-inner-container">
                 
                 <template is='dom-if' if='[[!alternateLayout]]'>
                     <div class="layout vertical img-container">
@@ -415,7 +492,7 @@
                     </div>
                 </template>
 
-                <div class="section-detail">
+                <div class$="section-detail [[computeLayoutWidth(width)]]">
                     
                     <div class="section-detail-header">[[heading]]
                     </div>
@@ -460,6 +537,10 @@
                     type: Boolean,
                     value: false,
                 },
+
+                width: {
+                  type: Object,
+                }
             },
 
             attached: function() {
@@ -470,13 +551,17 @@
                 }   
             },
 
-            computeLayoutClass: function(vertical) {
-                return vertical ? "layout vertical" : "layout horizontal around-justified";
-            },
-
             computeAlignmentClass: function(alternateLayout) {
                 return alternateLayout ? "self-end" : "self-start";
             },
+
+            computeLayoutWidth: function(width) {
+                if(width.superWide) {
+                    return "narrow";
+                } else {
+                    return "";
+                }
+            }
         });
     </script>
 </dom-module>
