BugFix: "on-close" event was not handled

--- a/src/components/common/aq-socket-handler.html
+++ b/src/components/common/aq-socket-handler.html
@@ -31,7 +31,8 @@
           json
           on-open="_onOpen"
           on-message="_onMessage"
-          on-error="_onError">
+          on-error="_onError"
+          on-close="_onClose">
       	</aq-web-socket>
 
 	</template>
