Bug fix: show all positions in portfolio tables(not just positive positions)

--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -666,7 +666,7 @@
                                         Object.keys(portfolioEachDay.positions).forEach(pkey => {
                                             var position = portfolioEachDay.positions[pkey];
                                             
-                                            if(position.quantity > 0) {
+                                            if(Math.abs(position.quantity) > 0) {
                                                 position.date = date;
                                                 positionsArray.push(position);    
                                             }
