Added Picture for about us Added reload parameters to refresh app after every 10 mins Added icon to QnA in community Changed size of community search bar

--- a/src/components/community/aq-community-home-searchbar.html
+++ b/src/components/community/aq-community-home-searchbar.html
@@ -92,7 +92,8 @@
         }
 
         #container {
-            width: 85%;
+            width: 100%;
+            min-width: 400px;
         }
  
     </style>
