--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -251,7 +251,7 @@
                 if (category == "Share your Idea") {
                     return "lightbulb-outline";
                 } else {
-                    return "add";
+                    return "question-answer";
                 }
             },
 
