--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -240,7 +240,7 @@
                 if (category == "Share your Idea") {
                     return "lightbulb-outline";
                 } else {
-                    return "add";
+                    return "question-answer";
                 }
             },
             
